# SPG-opengl

./: .gitignore  CMakeLists.txt  README.md  fragment.frag  main.cxx  spheremesh.h  vertex.vert
